# OmniNPC

./: .env.example  .gitignore  OmniNPC.md  pyproject.toml
config/: settings.py
data/characters/: gentle_healer.yaml  tsundere_sister.yaml
data/chroma_db/: chroma.sqlite3  chroma.sqlite3-journal  manual_test.sqlite3  manual_test.sqlite3-journal
data/chroma_db_fresh/: chroma.sqlite3-journal
demo/: streamlit_app.py
src/: __init__.py  engine.py
src/adapters/: __init__.py
src/api/: app.py
src/cognition/: action_generator.py  action_planner.py  agent_state.py  inner_monologue.py  perception.py  pipeline.py
src/llm/: client.py
src/memory/: decay.py  emotion_scorer.py  entity_extractor.py  episodic_memory.py  memory_manager.py  semantic_memory.py  working_memory.py
src/models/: character.py  game_state.py  memory.py  message.py
src/observability/: events.py  trace.py
src/runtime/: actions.py  agent_runtime.py  chat_policy.py  policies.py  runtime_result.py  step_budget.py  stop_conditions.py  turn_context.py
src/sandbox/: rumor_spreader.py  tick_engine.py
src/storage/: game_state_store.py
src/tools/: base.py  item_manager.py  state_updater.py
tests/: test_api.py  test_cognition.py  test_memory.py  test_phase2.py
tests/adapters/: test_memory_adapter.py  test_model_adapter.py  test_tool_executor.py
tests/cognition/: test_action_planner.py  test_perception_ability.py  test_reflection_and_action_policy.py
tests/config/: test_settings.py
tests/runtime/: test_agent_runtime.py  test_chat_runtime_policy.py  test_engine_runtime_integration.py  (+5 more)
(+14 files in other folders)
